@@ -1,3 +1,12 @@
+2001-03-07  JP Rosevear  <jpr@ximian.com>
+
+	* soupConf.sh.in: use configure.in vars for subst
+
+	* configure.in: create variables for config script
+
+	* Makefile.am: generate the soupConf.sh script in the makefile for
+	proper substitution
+
 2001-03-07  Alex Graveley  <alex@ximian.com>
 
 	* src/soup-core/soup-cgi.c: created. moved cgi-related request
